--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -19,6 +19,16 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    # --- Build Angular frontend first ---
+    - name: Install frontend dependencies
+      working-directory: ./frontend
+      run: npm install
+
+    - name: Build Angular frontend
+      working-directory: ./frontend
+      run: npm run build -- --prod
+
+    # --- Then build and push backend Docker image ---
     - name: Build and push backend image
       uses: docker/build-push-action@v4
       with:
@@ -26,6 +36,7 @@ jobs:
         push: true
         tags: riyaz04k/crud-dd-task-mean-app-backend:latest
 
+    # --- Build and push frontend Docker image ---
     - name: Build and push frontend image
       uses: docker/build-push-action@v4
       with:
