--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -3,25 +3,29 @@ name: Docker CI/CD
 on:
   push:
     branches:
-      - main
+      - main  # Trigger workflow on push to main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+    # 1. Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
     # -------------------------
-    # Build Backend Docker Image
+    # 2. Log in to Docker Hub
     # -------------------------
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}   # Docker Hub username secret
+        password: ${{ secrets.DOCKER_PASSWORD }}   # Docker Hub access token secret
 
+    # -------------------------
+    # 3. Build and push backend image
+    # -------------------------
     - name: Build and push backend image
       uses: docker/build-push-action@v4
       with:
@@ -30,7 +34,7 @@ jobs:
         tags: riyaz04k/crud-dd-task-mean-app-backend:latest
 
     # -------------------------
-    # Build Frontend Docker Image
+    # 4. Build Angular frontend
     # -------------------------
     - name: Install frontend dependencies
       working-directory: ./frontend
@@ -48,14 +52,14 @@ jobs:
         tags: riyaz04k/crud-dd-task-mean-app-frontend:latest
 
     # -------------------------
-    # Deploy to EC2
+    # 5. Deploy to EC2 via SSH
     # -------------------------
     - name: SSH to EC2 and deploy
       uses: appleboy/ssh-action@v0.1.9
       with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ubuntu
-        key: ${{ secrets.EC2_SSH_KEY }}
+        host: ${{ secrets.EC2_HOST }}        # EC2 public IP or hostname
+        username: ubuntu                     # EC2 username
+        key: ${{ secrets.EC2_SSH_KEY }}      # Private key for SSH (stored as secret)
         script: |
           cd ~/crud-dd-task-mean-app
           docker compose pull
