--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,3 +1,4 @@
+# .github/workflows/docker-ci-cd.yml
 name: Docker CI/CD
 
 on:
@@ -20,8 +21,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}   # Docker Hub username secret
-        password: ${{ secrets.DOCKER_PASSWORD }}   # Docker Hub access token secret
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     # -------------------------
     # 3. Build and push backend image
@@ -57,10 +58,15 @@ jobs:
     - name: SSH to EC2 and deploy
       uses: appleboy/ssh-action@v0.1.9
       with:
-        host: ${{ secrets.EC2_HOST }}        # EC2 public IP or hostname
-        username: ubuntu                     # EC2 username
-        key: ${{ secrets.EC2_SSH_KEY }}      # Private key for SSH (stored as secret)
+        host: ${{ secrets.EC2_HOST }}
+        username: ubuntu
+        key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          # Clone the repo if it doesn't exist
+          if [ ! -d "~/crud-dd-task-mean-app" ]; then
+            git clone https://github.com/riyaz04k/crud-dd-task-mean-app.git ~/crud-dd-task-mean-app
+          fi
           cd ~/crud-dd-task-mean-app
+          git pull origin main
           docker compose pull
           docker compose up -d --build
