--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/docker-ci-cd.yml
 name: Docker CI/CD
 
 on:
@@ -35,16 +34,8 @@ jobs:
         tags: riyaz04k/crud-dd-task-mean-app-backend:latest
 
     # -------------------------
-    # 4. Build Angular frontend
+    # 4. Build and push frontend image (multi-stage)
     # -------------------------
-    - name: Install frontend dependencies
-      working-directory: ./frontend
-      run: npm install
-
-    - name: Build Angular frontend
-      working-directory: ./frontend
-      run: npm run build -- --configuration production
-
     - name: Build and push frontend image
       uses: docker/build-push-action@v4
       with:
@@ -62,11 +53,23 @@ jobs:
         username: ubuntu
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          # Clone the repo if it doesn't exist
+          set -e
+          
+          # Clone repo only if it doesn't exist
           if [ ! -d "~/crud-dd-task-mean-app" ]; then
             git clone https://github.com/riyaz04k/crud-dd-task-mean-app.git ~/crud-dd-task-mean-app
           fi
+
           cd ~/crud-dd-task-mean-app
-          git pull origin main
+
+          # Reset repo to latest main (avoids merge conflicts)
+          git fetch origin main
+          git reset --hard origin/main
+
+          # Stop old containers & clean cache
+          docker compose down --remove-orphans
+          docker system prune -af
+
+          # Pull latest images & start fresh
           docker compose pull
           docker compose up -d --build
