--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -10,66 +10,57 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout the repository
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # 1. Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # -------------------------
-    # 2. Log in to Docker Hub
-    # -------------------------
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      # -------------------------
+      # 2. Log in to Docker Hub
+      # -------------------------
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # -------------------------
-    # 3. Build and push backend image
-    # -------------------------
-    - name: Build and push backend image
-      uses: docker/build-push-action@v4
-      with:
-        context: ./backend
-        push: true
-        tags: riyaz04k/crud-dd-task-mean-app-backend:latest
+      # -------------------------
+      # 3. Build and push backend image
+      # -------------------------
+      - name: Build and push backend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend
+          push: true
+          tags: riyaz04k/crud-dd-task-mean-app-backend:latest
 
-    # -------------------------
-    # 4. Build and push frontend image (multi-stage)
-    # -------------------------
-    - name: Build and push frontend image
-      uses: docker/build-push-action@v4
-      with:
-        context: ./frontend
-        push: true
-        tags: riyaz04k/crud-dd-task-mean-app-frontend:latest
+      # -------------------------
+      # 4. Build Angular frontend and push image
+      # -------------------------
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm install
 
-    # -------------------------
-    # 5. Deploy to EC2 via SSH
-    # -------------------------
-    - name: SSH to EC2 and deploy
-      uses: appleboy/ssh-action@v0.1.9
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ubuntu
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          set -e
-          
-          # Clone repo only if it doesn't exist
-          if [ ! -d "~/crud-dd-task-mean-app" ]; then
-            git clone https://github.com/riyaz04k/crud-dd-task-mean-app.git ~/crud-dd-task-mean-app
-          fi
+      - name: Build Angular frontend
+        working-directory: ./frontend
+        run: npm run build -- --configuration production
 
-          cd ~/crud-dd-task-mean-app
+      - name: Build and push frontend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          push: true
+          tags: riyaz04k/crud-dd-task-mean-app-frontend:latest
 
-          # Reset repo to latest main (avoids merge conflicts)
-          git fetch origin main
-          git reset --hard origin/main
-
-          # Stop old containers & clean cache
-          docker compose down --remove-orphans
-          docker system prune -af
-
-          # Pull latest images & start fresh
-          docker compose pull
-          docker compose up -d --build
+      # -------------------------
+      # 5. Deploy to EC2 via SSH (pull images and restart)
+      # -------------------------
+      - name: SSH to EC2 and deploy
+        uses: appleboy/ssh-action@v0.1.9
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd ~/crud-dd-task-mean-app
+            docker compose pull
+            docker compose up -d
